First stab at a simple landing page

--- a/index.html
+++ b/index.html
@@ -76,37 +76,42 @@ a {
 }
 
 .download {
+  border: 0;
   margin: auto;
   margin-top: 40px;
   display: block;
   width: 191px;
 }
 
+#main-wrapper {
+  background-color: #212d19;
+}
 #main {
+  background-color: #212d19;
   padding-top: 40px;
-  font-size: 1.3em;
+  font-size: 1.4em;
   line-height: 2em;
 }
 
-em {
-  font-style: normal;
-/*  font-size: 1.8em;*/
-/*  padding-left: 3px;*/
-/*  padding-right: 3px;*/
+h1 {
+    font-weight: 200;
 }
 
 #footer-wrapper {
   background-color: #cb6000; /* #FF7900;*/
-  height: 30px;
+  height: 40px;
   margin-top: 80px;
 }
 
 #footer {
   font-size: 16px;
   height: 100%;
-  letter-spacing: 1px;
-  line-height: 30px;
+  line-height: 40px;
   text-shadow: 1px -1px 3px rgba(0, 0, 0, 0.7);
+}
+
+p {
+  padding-bottom: 1em;
 }
 </style>
 </head>
@@ -125,13 +130,13 @@ em {
   </div>
 </div></div>
 
-<div id='main'>
-  <p><em>Since ancient times,</em> sharing a meal has been one of humanity's most revered social rituals. To break bread with someone is <em>to communicate</em> and <em>to connect</em> with them. Modern technology has <em>connected us</em> in ways we previously thought impossible, but we had yet to truly wed the power of the Internet with this timeless social tradition.</p>
+<div id='main-wrapper'><div id='main'>
+    <p>WhatsApplebee's is the premier <a href="http://applebees.com">Applebee's</a>-based social network. Using our iPhone app, you can have anonymous conversations with other Applebee's patrons and brand advocates.</p>
 
-  <p><em>Until now.</em></p>
+    <p>Unlike other chain restaurant-based messaging services, WhatsApplebee's goes to great lengths to ensure that our users are true Applebee's fans. Using the iPhone's location services, WhatsApplebee's limits access to those currently inside an Applebee's restaurant inside the United States.</p>
+    <a href="https://itunes.apple.com/us/app/whatsapplebees/id867011102" class='download'><img src="app-store.png" alt="Download on the iOS App Store"/></a>
 
-  <p><em>WhatsApplebee's</em> is the hottest new exclusive social network.</p>
-</div>
+</div></div>
 
 <div id='footer-wrapper'><div id='footer'>
 A project by <a href="http://lazerwalker.com">Mike Lazer-Walker</a>.
