WhatsApplebee's is not a social network.

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ p {
 </div></div>
 
 <div id='main-wrapper'><div id='main'>
-    <h1>WhatsApplebee's is the premier social network for fans of <a href="http://applebees.com">Applebee's</a>.</h1>
+    <h1>WhatsApplebee's is the premier social chat app for fans of <a href="http://applebees.com">Applebee's</a>.</h1>
 
     <p>Using our iPhone app, you can have anonymous conversations with other Applebee's patrons and brand advocates.</p>
 
