Re-order slogan words

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ p {
 <div id='header'>
   <img src='iphone.png' class='phone'/>
   <div class='right'>
-    <div class='lede'>Connect. Communicate. Share.
+    <div class='lede'>Connect. Share. Communicate.
     <br/>
   But Only At Applebee's.</div>
     <a href="https://itunes.apple.com/us/app/whatsapplebees/id867011102" class='download'><img src="app-store.png" alt="Download on the iOS App Store"/></a>
