Tweak font sizing

--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@ a {
 }
 
 h1 {
+    font-size: 1.6em;
     font-weight: 200;
-    line-height: 1.3em;
+    line-height: 1.6em;
     padding-bottom: 0.6em;
 }
 
