Namedrop our terrible competitors.

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ p {
 
     <p>Using our iPhone app, you can have anonymous conversations with other Applebee's patrons and brand advocates.</p>
 
-    <p>Unlike other chain restaurant-based messaging services, WhatsApplebee's uses the iPhone's location services to limit access to those currently inside an Applebee's.</p>
+    <p>WhatsApplebee's uses the iPhone's location services to limit access to those currently inside an Applebee's. We enforce this strictly, unlike other chain restaurant-based messaging services such as T. G. I. Friendster or Olive Grindr.</p>
     <a href="https://itunes.apple.com/us/app/whatsapplebees/id867011102" class='download'><img src="app-store.png" alt="Download on the iOS App Store"/></a>
 
 </div></div>
