--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 body {
   background-color: #212d19;
   color: #EEE;
-  font-family: Helvetica neue;
+  font-family: Helvetica Neue, Helvetica, sans-serif;
   font-weight: 200;
   margin: 0;
 }
