Make header work on iPhone

--- a/index.html
+++ b/index.html
@@ -129,6 +129,11 @@ p {
 }
 
 @media screen and (max-width: 500px) {
+  #top {
+    width: 100% !important;
+    font-size: 1.8em;
+  }
+
   .phone {
     float: none;
     position: relative;
