--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no">
+<title>WhatsApplebee's · See You Tomorrow</title>
 <style>
 body {
   background-color: #212d19;
