Make big image a JPG instead of PNG

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ a {
 }
 
 #header-wrapper {
-  background-image: url('./background.png');
+  background-image: url('./background.jpg');
   background-size: 100% 100%;
   margin-top: 80px;
 }
