--- a/index.html
+++ b/index.html
@@ -104,7 +104,6 @@ h1 {
 #footer-wrapper {
   background-color: #cb6000; /* #FF7900;*/
   height: 40px;
-  margin-top: 80px;
 }
 
 #footer {
@@ -112,6 +111,12 @@ h1 {
   height: 100%;
   line-height: 40px;
   text-shadow: 1px -1px 3px rgba(0, 0, 0, 0.7);
+}
+
+.disclaimer {
+  font-size: 0.5em;
+  line-height: 20px;
+  padding-top: 80px;
 }
 
 p {
@@ -187,7 +192,10 @@ p {
     <p>WhatsApplebee's uses the iPhone's location services to limit access to those currently inside an Applebee's. We enforce this strictly, unlike other chain restaurant-based messaging services such as T. G. I. Friendster or Olive Grindr.</p>
     <a href="https://itunes.apple.com/us/app/whatsapplebees/id867011102" class='download'><img src="app-store.png" alt="Download on the iOS App Store"/></a>
 
-</div></div>
+<div class='disclaimer'>Not affiliated, associated, authorized, endorsed by, or in any way officially connected with Applebee's International, Inc., or any of its subsidaries or affiliates.</div>
+
+</div>
+</div>
 
 <div id='footer-wrapper'><div id='footer'>
 A project by <a href="http://lazerwalker.com">Mike Lazer-Walker</a>.
