--- a/index.html
+++ b/index.html
@@ -201,4 +201,14 @@ p {
 A project by <a href="http://lazerwalker.com">Mike Lazer-Walker</a>.
 </div></div>
 </body>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-50720724-1', 'whatsapplebees.com');
+  ga('send', 'pageview');
+
+</script>
 </html>
