--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@ a {
 #header-wrapper {
   background-image: url('./background.jpg');
   background-size: 100% 100%;
+  max-width: 1600px;
+  margin: auto;
   margin-top: 80px;
 }
 
