--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@ a {
 
 #header-wrapper {
   background-image: url('./background.jpg');
-  background-size: 100% 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
   margin-top: 80px;
 }
 
