Add CSS for large screens

--- a/index.html
+++ b/index.html
@@ -168,6 +168,18 @@ p {
   }
 }
 
+@media screen and (min-width: 1600px) {
+  #header {
+    box-sizing: border-box;
+    min-height: 650px;
+    padding-top: 50px;
+  }
+
+  .phone {
+    top: 75px;
+  }
+}
+
 </style>
 </head>
 <body>
