Add FB meta image

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no">
+<meta property="og:image" content="http://whatsapplebees.com/icon-1024.png"/>
 <title>WhatsApplebee's · See You Tomorrow</title>
 <style>
 body {
