Add og:title meta tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no">
 <meta property="og:image" content="http://whatsapplebees.com/icon-1024.png"/>
+<meta property="og:title" content="WhatsApplebee's"/>
 <title>WhatsApplebee's · See You Tomorrow</title>
 <style>
 body {
