--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ p {
     <p>WhatsApplebee's uses iPhone location services to limit access to those currently inside an Applebee's. We enforce this strictly, unlike other chain restaurant-based messaging services such as T.G.I. Friendster or Olive Grindr.</p>
     <a href="https://itunes.apple.com/us/app/whatsapplebees/id867011102" class='download'><img src="app-store.png" alt="Download on the iOS App Store"/></a>
 
-<div class='disclaimer'>Not affiliated, associated, authorized, endorsed by, or in any way officially connected with Applebee's International, Inc., or any of its subsidaries or affiliates.</div>
+<div class='disclaimer'>This website and the WhatsApplebees application are independently owned and operated by Mike Lazer-Walker. Applebee’s International, Inc. and its affiliates are not responsible for the content on this website or on the WhatsApplebees application.</div>
 
 </div>
 </div>
