Add rights reserved symbol

--- a/index.html
+++ b/index.html
@@ -194,13 +194,13 @@ p {
   <div class='right'>
     <div class='lede'>Connect. Share. Communicate.
     <br/>
-  But Only At Applebee's.</div>
+  But Only At Applebee's<sup>®</sup>.</div>
     <a href="https://itunes.apple.com/us/app/whatsapplebees/id867011102" class='download'><img src="app-store.png" alt="Download on the iOS App Store"/></a>
   </div>
 </div></div>
 
 <div id='main-wrapper'><div id='main'>
-    <h1>WhatsApplebee's is the premier social chat app for fans of <a href="http://applebees.com">Applebee's</a>.</h1>
+    <h1>WhatsApplebee's is the premier social chat app for fans of <a href="http://applebees.com">Applebee's<sup>®</sup></a>.</h1>
 
     <p>Using our iPhone app, you can have anonymous conversations with other Applebee's patrons and brand advocates.</p>
 
